<resources>
    <string name="app_name">Food Planner</string>
    <string name="client_id">888404159185-g38llii2eq74ttrm8f315k5ju27o4lii.apps.googleusercontent.com</string>
    <string-array name="language_options">
        <item>Choose Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your E-mail</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your Password</string>
    <string name="sign_up_subtitle">Sign Up now and explore our distinguish meals</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your Name</string>
    <string name="confrim_password">Confirm Passowrd</string>
    <string name="re_enter_password">Re-enter your Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="signInNow">Sign in now!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_subtitle">We missed you sign in now!</string>
    <string name="dont_have_acc">"Don't have an account? "</string>
    <string name="welcome">Welcome, </string>
    <string name="stay_logged_in">Stay Signed in</string>
    <string name="or">OR</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_guest">Sign in as Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="meals">Meals</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="ingrediants">Ingredients</string>
    <string name="country">Country:</string>
    <string name="instructions">Instructions</string>
    <string name="planner">Planner</string>
    <string name="guest">Guest</string>
    <string name="you_dont_have_favorites_yet">"You don't have any Favorites yet "</string>
    <string name="you_need_to_sign_in_first">You need to Sign in first to use this feature</string>
    <string name="add_to_plan">Add to Your Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_to_planner">Add to Planner</string>
    <string name="remove_from_plan">Remove from Plan</string>
    <string name="you_dont_have_any_plans_yet">You don\'t have any Plans yet</string>
    <string name="backup">Backup</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_failed">Sign-in failed. Please check your details and try again.</string>
    <string name="google_sign_in_failed">Google Sign-in failed. Please check your details and try again.</string>
    <string name="invalid_credentials">Please check your Email/password and try again.</string>
    <string name="invalid_user">No account found with this email.</string>
    <string name="network_error">Network error. Please check your internet connection and try again.</string>
    <string name="user_data_retrieval_failed">User data retrieval failed.</string>
    <string name="signing_in_message">Signing in…</string>
    <string name="empty_email_password_message">Email and Password must not be empty</string>
    <string name="no_internet_message">No internet connection</string>
    <string name="welcome_message">Welcome!</string>
    <string name="google_signin_failure_message">Google sign-in failed. Please try again.</string>
    <string name="signing_up_message">Signing Up…</string>
    <string name="sign_up_success_message">Sign Up Successful!</string>
    <string name="fix_errors_message">You should fix the above errors</string>
    <string name="account_exists_error">An account already exists with this email. Please try logging in or use a different email.</string>
    <string name="weak_password_error">The password is too weak. Please choose a stronger password.</string>
    <string name="invalid_credentials_error">The email address is badly formatted or the password is incorrect.</string>
    <string name="sign_up_failed_error">Sign-up failed. Please check your details and try again.</string>
    <string name="error_try_sign_in_again">An error occurred. Please try signing in again.</string>">
    <string name="meal_removed_from_favorites">Meal removed from your favorites</string>
    <string name="meal_added_to_favorites">Meal added to your favorites</string>
    <string name="meal_removed_from_plan">Meal removed from your plan</string>
    <string name="meal_added_to_plan">Meal added to your plan</string>
    <string name="please_select_meal_type">Please select a meal type.</string>
    <string name="favorite_meals_uploaded_successfully">Favorite meals uploaded successfully.</string>
    <string name="failed_to_upload_favorite_meals">Failed to upload favorite meals.</string>
    <string name="no_favorite_meals_found">No favorite meals found.</string>
    <string name="meal_plans_uploaded_successfully">Meal plans uploaded successfully.</string>
    <string name="failed_to_upload_meal_plans">Failed to upload meal plans.</string>
    <string name="no_meal_plans_found">No meal plans found.</string>
    <string name="meal_ingredients_uploaded_successfully">Meal ingredients uploaded successfully.</string>
    <string name="failed_to_upload_meal_ingredients">Failed to upload meal ingredients.</string>
    <string name="backing_up_message">Backing up…</string>">
    <string name="error_no_current_user">No current user</string>
    <string name="error_no_ingredients">No Ingredients found</string>
    <string name="error_no_user_data">No user data found</string>
    <string name="error_fetch_meal">Failed to fetch Meal of the day. Response unsuccessful or data is null.</string>
    <string name="error_fetch_meals">Failed to fetch Meals. Response unsuccessful or data is null.</string>
    <string name="error_fetch_ingredients">Failed to fetch Ingredients. Response unsuccessful or data is null.</string>
    <string name="error_fetch_meal_details">Failed to fetch Meal. Response unsuccessful or data is null.</string>
    <string name="error_fetch_categories">Failed to fetch categories. Response unsuccessful or data is null.</string>
    <string name="error_fetch_countries">Failed to fetch countries. Response unsuccessful or data is null.</string>
    <string name="error_response_unsuccessful">Response unsuccessful</string>
    <string name="error_network">Network error: Please check your internet connection and try again.</string>
    <string name="error_unexpected">Unexpected error: please contact us for assistance.</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_language">Change your language</string>

    <string name="lang">العربية</string>

    <string name="backup_interrupted_message">Backup has been interrupted but will continue on background when the connection is restored.</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>


</resources>