<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />

    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/star_icon"
        android:title="@string/favourites" />

    <item
        android:id="@+id/foodPlannedPreviewFragment"
        android:icon="@drawable/resturant_icon"
        android:title="@string/planner" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings" />
</menu>