<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mealapp.feature.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.example.mealapp.feature.favourites.view.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.mealapp.feature.settings.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.mealapp.feature.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>