<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    app:cardCornerRadius="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/register_login_background"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

        <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/signUpSubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_up_subtitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                style="@style/CustomEditTextStyle"
                android:drawableStart="@drawable/person_icon"
                android:hint="@string/enter_name"
                android:inputType="textEmailAddress"
                 />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                style="@style/CustomEditTextStyle"
                android:drawableStart="@android:drawable/sym_action_email"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                style="@style/CustomEditTextStyle"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
               />

            <TextView
                android:id="@+id/confirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/confrim_password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                style="@style/CustomEditTextStyle"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
               />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/CustomButtonStyle"
            android:text="@string/sign_up"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/alreadyHaveAccText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signInTextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/signInNow"
                android:textColor="@color/textTitleColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        </LinearLayout>
        </androidx.cardview.widget.CardView>
        </ScrollView>
    </FrameLayout>
</androidx.cardview.widget.CardView>
