<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/datePicker"
            style="@android:style/Widget.DeviceDefault.DatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"
            android:headerBackground="@color/colorPrimary"
            android:pointerIcon="none" />

        <RadioGroup
            android:id="@+id/mealTypeGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@drawable/meal_type_radio_btn"
                android:text="@string/breakfast" />

            <RadioButton
                android:id="@+id/rb_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@drawable/meal_type_radio_btn"
                android:text="@string/lunch" />

            <RadioButton
                android:id="@+id/rb_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@drawable/meal_type_radio_btn"
                android:text="@string/dinner" />
        </RadioGroup>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomButtonStyle"
            android:text="@string/add_to_planner" />

    </LinearLayout>
</ScrollView>
