<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/welcome_background"
            android:scaleType="centerCrop" />

        <View
            android:id="@+id/halfCircle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-18dp"
            android:background="@drawable/half_circle" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signInButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/welcome"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signUpButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/halfCircle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>